[app] mobile fix collapse scrollbars

--- a/app/src/web/base.css
+++ b/app/src/web/base.css
@@ -22,15 +22,34 @@
 
 html,
 body {
-  max-height: 100vh;
-  max-width: 100vw;
-  height: 100%;
-  width: 100%;
   overflow: hidden;
   margin: 0px;
   padding: 0px;
   background-color: #000;
+  pointer-events: none;
 }
+
+html, body, #root {
+  width: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
+  height: 100vh;
+  height: -webkit-fill-available;
+  max-height: -webkit-fill-available;
+  width: 100vw;
+}
+
+body {
+  max-height: calc(100vh + 10px);
+  height: calc(100vh + 10px);
+}
+
+/* body:focus-within {
+  top: 0;
+  position: fixed;
+  overflow: hidden;
+  height: 100vh;
+} */
 
 #root {
   flex-shrink: 0;
@@ -41,12 +60,7 @@ body {
   z-index: 0;
   overflow: hidden;
   position: relative;
-  max-height: 100vh;
-  position: absolute;
   inset: 0;
-  /* ios safari fix */
-  height: 100%;
-  width: 100%;
 }
 
 * {
